First attempt at fixing firefox dark mode (#22)

--- a/assets/css/template-styles.css
+++ b/assets/css/template-styles.css
@@ -1024,3 +1024,13 @@ h1 svg {
       background: none;
   }
 }
+
+::-moz-selection { /* Code for Firefox */
+    background: rgba(0,0,0,.8);
+    color: #fefefe;
+}
+  
+::selection {
+  background: rgba(0,0,0,.8);
+  color: #fefefe;
+}
